@@ -406,7 +406,7 @@ tzx_read_pulses_block( libspectrum_tape *tape, const libspectrum_byte **ptr,
     return LIBSPECTRUM_ERROR_CORRUPT;
   }
 
-  lengths = libspectrum_malloc( count * sizeof( *lengths ) );
+  lengths = libspectrum_new( libspectrum_dword, count );
 
   /* Copy the data across */
   for( i = 0; i < count; i++ ) {
@@ -572,7 +572,7 @@ tzx_read_generalised_data( libspectrum_tape *tape,
   }
 
   symbols = libspectrum_malloc( symbol_count * sizeof( *symbols ) );
-  repeats = libspectrum_malloc( symbol_count * sizeof( *repeats ) );
+  repeats = libspectrum_new( libspectrum_word, symbol_count );
 
   for( i = 0; i < symbol_count; i++ ) {
     symbols[ i ] = **ptr; (*ptr)++;
@@ -772,10 +772,10 @@ tzx_read_select( libspectrum_tape *tape, const libspectrum_byte **ptr,
   libspectrum_tape_block_set_count( block, count );
 
   /* Allocate memory */
-  offsets = libspectrum_malloc( count * sizeof( *offsets ) );
+  offsets = libspectrum_new( int, count );
   libspectrum_tape_block_set_offsets( block, offsets );
 
-  descriptions = libspectrum_malloc( count * sizeof( *descriptions ) );
+  descriptions = libspectrum_new( char *, count );
   libspectrum_tape_block_set_texts( block, descriptions );
 
   /* Read in the data */
@@ -945,10 +945,10 @@ tzx_read_archive_info( libspectrum_tape *tape, const libspectrum_byte **ptr,
   libspectrum_tape_block_set_count( block, count );
 
   /* Allocate memory */
-  ids = libspectrum_malloc( count * sizeof( *ids ) );
+  ids = libspectrum_new( int, count );
   libspectrum_tape_block_set_ids( block, ids );
 
-  strings = libspectrum_malloc( count * sizeof( *strings ) );
+  strings = libspectrum_new( char *, count );
   libspectrum_tape_block_set_texts( block, strings );
 
   for( i = 0; i < count; i++ ) {
@@ -1014,13 +1014,13 @@ tzx_read_hardware( libspectrum_tape *tape, const libspectrum_byte **ptr,
   }
 
   /* Allocate memory */
-  types = libspectrum_malloc( count * sizeof( *types ) );
+  types = libspectrum_new( int, count );
   libspectrum_tape_block_set_types( block, types );
 
-  ids = libspectrum_malloc( count * sizeof( *ids ) );
+  ids = libspectrum_new( int, count );
   libspectrum_tape_block_set_ids( block, ids );
 
-  values = libspectrum_malloc( count * sizeof( *values ) );
+  values = libspectrum_new( int, count );
   libspectrum_tape_block_set_values( block, values );
 
   /* Actually read in all the data */
